Bugfixing countries, metadata and whois + Some refactoring