@@ -32,7 +32,13 @@ repositories {
 }
 
 
+
+
 compileJava {
+    options.compilerArgs += ["-Xlint:deprecation", "--enable-preview"]
+
+}
+compileTestJava {
     options.compilerArgs += ["-Xlint:deprecation", "--enable-preview"]
 
 }
@@ -94,5 +100,9 @@ dependencies {
     testImplementation "org.mockito:mockito-core:3.8.0"
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 
+    testImplementation group: 'org.openjdk.jmh', name: 'jmh-core', version: '1.29'
+    testAnnotationProcessor  group: 'org.openjdk.jmh', name: 'jmh-generator-annprocess', version: '1.29'
+
 
 }
+
